--- a/style.css
+++ b/style.css
@@ -1,112 +1,102 @@
-
-*
-{
-    margin:0;
-    padding:0;
-    font-family: 'Times New Roman', Times, serif;
-}
-body{
-    background: url("./images/bg-img.jpg") no-repeat center center/cover;
-    background-position: 5% 20%;
-    
-    
-}
-.header
-{
-    
-    margin-bottom:6%;
-    padding:1%;
-    opacity:1;
-    background-color:#ecf0f1;
-    position:sticky;
-    top:0;
-    
-}
-.container1{
-    
-    width : 46%;
-    margin: 2% 5%;
-    display:grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: auto auto;
-    grid-gap:10px;
-    grid-auto-flow: column;
-    
-    
-    
-    
+/*CSS for all*/
+* {
+	margin: 0;
+	padding: 0;
+	font-family: 'Roboto', sans-serif
 }
 
-.container-top
-{
-    
-    width : 45%;
-    margin: 2% 5%;
-    background-color:#ecf0f1;
-    
-    
-    
-}
-
-.container-logo img{
-    width:20%;
-    height:25%;
-    padding:2%;
-}
-.container-heading
-{
-    font-family: 'Roboto', sans-serif;
-    font-size:1.2em;
-    padding:4%;
-    font-weight: bold;
-}
-.container-text{
-    padding:4%;
-    font-style: italic;
-    font-size:1em;
-    
-    
-
-}
-.red-text
-{
-    color: #ff214f;
-    font-family: 'Roboto', sans-serif;
-    font-size:1.3em;
-    padding:4%;
-
-}
-.normal-text
-{
-    font-size:2em;
-    font-family: 'Roboto', sans-serif;
-    padding:0 4% 4% 4%;
-}
-.left-container{
-    width:92%;
-    opacity:0.8;
-    padding:2%;
-    margin-right:2%;
-    background-color:#ecf0f1;
-   
-  
-    
-    
-}
-.footer{
-    background-color:black ;
-    color:white;
-    padding:2.5%;
-    text-align: center;
-    font-family:sans-serif;
-}
-.footer a{
-    color:pink;
-    text-decoration: underline;
-}
-.footer a:hover{
-    text-decoration: none;
-    color:grey;
+body {
+	background: url("./images/bg-img.jpg") no-repeat center center/cover;
+	background-position: 5% 20%;
 }
 
 
+/*CSS for navbar section*/
+.navbar {
+	margin-bottom: 6%;
+	padding: 1%;
+	opacity: 1;
+	background-color: #ecf0f1;
+	position: sticky;
+	top: 0;
+}
+
+
+/*CSS for top-container*/
+.top-container {
+	width: 45%;
+	margin: 2% 5%;
+	background-color: #ecf0f1;
+}
+
+.red-text {
+	color: #ff214f;
+	font-family: 'Roboto', sans-serif;
+	font-size: 1.3em;
+	padding: 4%;
+}
+
+.normal-text {
+	font-size: 2em;
+	font-family: 'Roboto', sans-serif;
+	padding: 0 4% 4% 4%;
+}
+
+
+/*CSS for grid-container*/
+.grid-outer-container {
+	width: 46%;
+	margin: 2% 5%;
+	display: grid;
+	grid-template-columns: 1fr 1fr;
+	grid-template-rows: auto auto;
+	grid-gap: 10px;
+	grid-auto-flow: column;
+}
+
+.grid-inner-container {
+	width: 92%;
+	opacity: 0.8;
+	padding: 2%;
+	margin-right: 2%;
+	background-color: #ecf0f1;
+}
+
+.container-logo img {
+	width: 20%;
+	height: 25%;
+	padding: 2%;
+}
+
+.container-heading {
+	font-family: 'Roboto', sans-serif;
+	font-size: 1.2em;
+	padding: 4%;
+	font-weight: bold;
+}
+
+.container-text {
+	padding: 4%;
+	font-style: italic;
+	font-size: 1em;
+}
+
+
+/*CSS for footer section*/
+.footer {
+	background-color: black;
+	color: white;
+	padding: 2.5%;
+	text-align: center;
+	font-family: sans-serif;
+}
+
+.footer a {
+	color: pink;
+	text-decoration: underline;
+}
+
+.footer a:hover {
+	text-decoration: none;
+	color: grey;
+}
