--- a/responsive.css
+++ b/responsive.css
@@ -1,31 +1,15 @@
 /*CSS for making it responsive*/
 
-@media screen and (min-width: 320px) and (max-width: 640px) {
-
-	.top-container {
-		width: 80vw;
-		margin: 0 auto 20px auto;
+@media (min-width: 800px){
+	.top-container{
+		width:42%;
 	}
+	.grid-outer-container{
+		width:46%;
+		grid-template-columns: 1fr 1fr;
+		grid-template-rows: auto auto;
+		grid-gap: 10px;
+		grid-auto-flow: column;
 
-	.red-text,
-	.normal-text {
-		margin: 0;
-		padding: 10px;
-	}
-
-	.grid-outer-container {
-		width: 80vw;
-		display: flex;
-		flex-direction: column;
-		margin: 0 auto;
-	}
-
-	.grid-inner-container {
-		width: auto;
-		margin: 0;
-	}
-
-	.grid-inner-container:last-child {
-		margin-bottom: 30px;
 	}
 }
